# benchmarks

./: .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp
src/: CMakeLists.txt  example.cpp  example.h  example.s
tests/: CMakeLists.txt  test.cpp
toolchains/: aarch64-linux-gcc.cmake
